# make_fself_rust

./: .gitignore  Cargo.toml  README.md  readme.md
resources/: gta-5.sprx  make_fself-27.py  make_fself-311.py  test-1.prx  test-2.prx  test-3.prx
src/: constants.rs  main.rs
