[package]
name = "make_fself"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.3"
clap = { version = "4.4.6", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12.1"
anyhow = "1.0"
object = "0.32.1"
derive_builder = "0.12.0"
